guestbook/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: guestbook-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  strategy:
    canary:
      steps:
      - setWeight: 10
      - pause: {duration: 5m}
      - setWeight: 20
      - pause: {duration: 5m}
      - setWeight: 40
      - pause: {duration: 5m}
      - setWeight: 60
      - pause: {duration: 5m}
      - setWeight: 100
      trafficRouting:
        managementPolicy: Managed
        service:
          name: guestbook-ui-stable
          port: 80
        stableService: guestbook-ui-stable
        canaryService: guestbook-ui-canary
        apiGateway:
          gatewayAPI:
            namespace: default
            httpRoute: guestbook-httproute
            webhooks:
            - serviceRef:
                name: argo-rollouts-notification-controller
                namespace: argo-rollouts
      analysis:
        templates:
        - templateName: success-rate
        args:
        - name: service-name
          value: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - image: gcr.io/google-samples/gb-frontend:v5
        name: guestbook-ui
        ports:
        - containerPort: 80
