guestbook/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui-canary
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: guestbook-ui
    rollouts-pod-template-hash: canary
