guestbook/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui-stable
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: guestbook-ui
    rollouts-pod-template-hash: stable
