guestbook/argocd-httproute-https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-httproute-https-redirect
  namespace: argocd
spec:
  parentRefs:
  - name: argocd-gateway
    sectionName: http
  rules:
  - backendRefs:
    - name: argocd-server
      port: 443
      weight: 1
    filters:
    - type: RequestRedirect
      requestRedirect:
        statusCode: 301
        scheme: https
        hostname: argocd.sulaksono.id
