guestbook/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-httproute
  namespace: argocd
spec:
  parentRefs:
  - name: argocd-gateway
    sectionName: https
  rules:
  - backendRefs:
    - name: argocd-server
      port: 443
