guestbook/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: guestbook-httproute
spec:
  parentRefs:
  - name: guestbook-gateway
  rules:
  - backendRefs:
    - name: guestbook-ui-stable
      port: 80
    - name: guestbook-ui-canary
      port: 80
